src/test/ui/parser/attr.stderr
error: an inner attribute is not permitted in this context
  --> $DIR/attr.rs:5:1
   |
LL | #![lang = "foo"]
   | ^^^^^^^^^^^^^^^^
LL |
LL | fn foo() {}
   | ----------- the inner attribute doesn't annotate this function
   |
   = note: inner attributes, like `#![no_std]`, annotate the item enclosing them, and are usually found at the beginning of source files
help: to annotate the function, change the attribute from inner to outer style
   |
LL - #![lang = "foo"]
LL + #[lang = "foo"]
   | 

error[E0522]: definition of an unknown language item: `foo`
  --> $DIR/attr.rs:5:1
   |
LL | #![lang = "foo"]
   | ^^^^^^^^^^^^^^^^ definition of unknown language item `foo`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0522`.
